<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:auto_cycle="true"
        app:indicator_visibility="invisible"
        app:pager_animation="Accordion"
        app:pager_animation_span="1100" />

    <com.overstock.android.prototype.widgets.PageNumberIndicator
        android:id="@+id/custom_Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/oapp_primary_text"
        android:textSize="@dimen/pager_indicator_text_size"
        android:paddingTop="@dimen/pager_indicator_padding_horizontal"
        android:paddingBottom="@dimen/pager_indicator_padding_horizontal"
        android:paddingStart="@dimen/pager_indicator_padding_vertical"
        android:paddingEnd="@dimen/pager_indicator_padding_vertical"
        android:layout_gravity="end" />

</FrameLayout>