<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/shipping_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shipping_title_text"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp" >

            <TextView
                android:id="@+id/shipping_lorem_ipsum_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/path_black"
                android:text="@string/lorem_ipsum_text"/>

            <TextView
                android:id="@+id/returns_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/returns_title_text"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/returns_lorem_ipsum_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/path_black"
                android:text="@string/lorem_ipsum_text"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
