<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="40dp" >

        <Button
            android:id="@+id/btn_details"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/more_info_details_button_text"
            android:layout_weight="1"
            android:background="@drawable/details"
            android:textColor="@color/details_text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp" />

        <Button
            android:id="@+id/btn_shipping_returns"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/more_info_shipping_button_text"
            android:layout_weight="1"
            android:background="@drawable/shipping"
            android:textColor="@color/shipping_text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp" />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_more_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp" >

    </android.support.v4.view.ViewPager>
</FrameLayout>